force-app/main/default/objects/SIC_Code__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of SCI Code</description>
    <label>Description</label>
    <length>180</length>
    <type>Text</type>
</CustomField>