force-app/main/default/objects/SIC_Code__c/fields/Numeric_Sic__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Sic__c</fullName>
    <formula>value(SIC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numeric Sic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>