force-app/main/default/objects/SIC_Code__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short Description of SCI Codes</description>
    <label>Short Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>