force-app/main/default/objects/SIC_Code__c/fields/SIC__c.field-meta.xml
<CustomField>
    <fullName>SIC__c</fullName>
    <description>SIC Codes</description>
    <label>SIC</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>